<?xml version="1.0" encoding="utf-8"?>



    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"
                      android:layout_alignParentTop="true"
                      android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_description"
                android:text="@string/text_description"
                android:textColor="@android:color/black"
                android:paddingBottom="10sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_description2"
                android:text="@string/text_description2"
                android:textColor="@android:color/holo_blue_dark"
                android:paddingBottom="25sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_weight"
                    android:textColor="@android:color/holo_orange_dark"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_weight"
                    android:textSize="18sp"
                    android:layout_weight="0.47"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:id="@+id/ent_weight"
                    android:hint="@string/ent_weight"
                    android:ems="5"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_height"
                    android:textColor="@android:color/holo_orange_dark"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_height"
                    android:textSize="18sp"
                    android:layout_weight="0.47"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:id="@+id/ent_height"
                    android:hint="@string/ent_height"
                    android:ems="5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <TextView
                    android:layout_width="214dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_age"
                    android:textColor="@android:color/holo_orange_dark"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_age"
                    android:textSize="18sp"
                    android:layout_weight="0.44"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/ent_age"
                    android:hint="@string/ent_age"
                    android:ems="5"
                    android:layout_weight="0.33"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:paddingTop="20sp"
                android:layout_gravity="center"
                >

                <Button
                    android:layout_width="150dp"
                    android:layout_height="34dp"
                    android:id="@+id/button_calculate_bmr"
                    android:textAlignment="center"
                    android:background="@android:color/holo_blue_dark"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/button_calculate_bmr"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_result"
                android:textColor="@android:color/holo_red_dark"
                android:paddingTop="9sp"
                android:fontFamily="sans-serif"
                android:textSize="17sp"/>

        </LinearLayout>
    </ScrollView>

