<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crunch_description"
            android:text="@string/crunch_description"
            android:textColor="@android:color/black"
            android:paddingBottom="10sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crunch_description2"
            android:text="@string/crunch_description2"
            android:textColor="@android:color/holo_blue_dark"
            android:paddingBottom="5sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="18sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crunch_description3"
            android:text="@string/crunch_description3"
            android:textColor="@android:color/holo_blue_dark"
            android:paddingBottom="20sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/crunches"/>


        <Button
            android:text="@string/button_crunch_start"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_orange_light"
            android:id="@+id/button"/>

        <TextView
            android:gravity="center"
            android:paddingTop="30dp"
            android:textSize="40dp"
            android:text="Get Ready and Click Start!"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_timer"
            android:layout_weight="0.35"/>

    </LinearLayout>
</ScrollView>
